Add openseedbox/tomcat (and remove /tomcat from openseedbox/base)
An Apache Tomcat image with a custom JDK, grabbed from
openseedbox/openseedbox@6eecce94200ae7a23011a226d87d8ef05d7c27a8

Had to use "temurin-focal" for Debian Bullseye.
"temurin"'s libssl3 will be in Debian Bookworm.

Step 18/23 : RUN set -eux; 	apt-get update; 	xargs -rt apt-get install -y --no-install-recommends < "$TOMCAT_NATIVE_LIBDIR/.dependencies.txt"; 	rm -rf /var/lib/apt/lists/*
 ---> Running in 382a435051ba
+ apt-get update
Get:1 http://deb.debian.org/debian bullseye InRelease [116 kB]
Get:2 http://deb.debian.org/debian-security bullseye-security InRelease [44.1 kB]
Get:3 http://deb.debian.org/debian bullseye-updates InRelease [39.4 kB]
Get:4 http://deb.debian.org/debian bullseye/main amd64 Packages [8182 kB]
Get:5 http://deb.debian.org/debian-security bullseye-security/main amd64 Packages [166 kB]
Get:6 http://deb.debian.org/debian bullseye-updates/main amd64 Packages [2592 B]
Fetched 8550 kB in 1s (6494 kB/s)
Reading package lists...
+ xargs -rt apt-get install -y --no-install-recommends
apt-get install -y --no-install-recommends libapr1 libssl3 libuuid1
Reading package lists...
Building dependency tree...
Reading state information...
E: Unable to locate package libssl3
The command '/bin/sh -c set -eux; 	apt-get update; 	xargs -rt apt-get install -y --no-install-recommends < "$TOMCAT_NATIVE_LIBDIR/.dependencies.txt"; 	rm -rf /var/lib/apt/lists/*' returned a non-zero code: 123